I4825 - fixes overflow issue

--- a/src/amo/components/Collection/styles.scss
+++ b/src/amo/components/Collection/styles.scss
@@ -31,7 +31,8 @@
   word-wrap: break-word;
 }
 
-.Collection-detail {
+.Collection-detail,
+.CollectionList-create {
   .Card-contents {
     overflow: visible;
   }
